<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>LDS_ROS_Driver</name>
  <version>2.1.0</version>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libboost-system-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
